saparated compile, validated
Former-commit-id: f34b206735aa4ec8f762a6c02e2ba6235ac178e1 [formerly 2d2986bc341528b101dacf216cf3c895343465c2]
Former-commit-id: 4545d23abb9b1f77722b2243d2ace6d8ddf29dbd

--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,34 @@ vitis/
 c_cpp_properties.json
 
 # ignore compilation bitstreams
-/compile/_x
-/compile/.ipcache
-/compile/.Xil
-/compile/build_dir
+/compile/_x/
+/compile/_x.hw.xilinx_aws-vu9p-f1_shell-v04261818_201920_3/
+/compile/_x.sw_emu.xilinx_aws-vu9p-f1_shell-v04261818_201920_3/
+/compile/.ipcache/
+/compile/.Xil/
+/compile/build_dir/
+/compile/build_dir.hw.xilinx_aws-vu9p-f1_shell-v04261818_201920_3/
+/compile/build_dir.sw_emu.xilinx_aws-vu9p-f1_shell-v04261818_201920_3/
+/compile/afi_creation/
+/compile/package.sw_emu/
+/compile/package.hw/
+/compile/.run/
 /compile/*.log
+/hello_world/
+/compile/OCL/_x/
+/compile/OCL/.ipcache/
+/compile/OCL/.Xil/
+/compile/OCL/build_dir/
+compile/OCL/vitis_analyzer.jou
+compile/OCL/vitis_analyzer.log
+compile/OCL/v++_seq_align_multiple_static.log
+compile/OCL/v++_a.log
+compile/xcd.log
+compile/xrc.log
+compile/OCL/xcd.log
+compile/xcd.log
+compile/xrc.log
+compile/dp-hls-host
+compile/OCL/xrc.log
+compile/OCL/host
+compile/emconfig.json
