--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,5 @@ compile/dp-hls-host
 compile/OCL/xrc.log
 compile/OCL/host
 compile/emconfig.json
+compile/_x.hw_emu.xilinx_aws-vu9p-f1_shell-v04261818_201920_3/
+compile/build_dir.hw_emu.xilinx_aws-vu9p-f1_shell-v04261818_201920_3/
