fixed cmake sim some degree
Former-commit-id: 63ad5c04365e39ad67790723edd52bc7f4313f40 [formerly 7c14405074b4c16611d44e2be093e82364814fff]
Former-commit-id: 50618fc7f93b7f96b10e15d67b27c1595132b017

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -119,7 +119,7 @@ target_compile_definitions(test_csim_global_linear PRIVATE ALIGN_GLOBAL_LINEAR)
 target_compile_definitions(test_csim_global_affine PRIVATE ALIGN_GLOBAL_AFFINE)
 target_compile_definitions(test_csim_local_affine PRIVATE ALIGN_LOCAL_AFFINE)
 
-target_include_directories(test_csim_global_affine PUBLIC "kernels/global_affine")
+target_include_directories(test_csim_global_affine PRIVATE "kernels/global_affine")
 
 set_property(TARGET test_pyapi PROPERTY CXX_STANDARD 17)
 set_property(TARGET test_align PROPERTY CXX_STANDARD 17)
