--- a/templates/Makefile.template
+++ b/templates/Makefile.template
@@ -20,11 +20,11 @@
 
 DHR = {{ dp_hls_root }}
 PARAMS_FLAGS += -DMAX_QUERY_LENGTH={{ max_query_length }} -DMAX_REFERENCE_LENGTH={{ max_reference_length }} -DPRAGMA_PE_NUM={{ pe_num }} -DN_BLOCKS={{ n_blocks }}
-HOST_SRCS += ${DHR}/src/hosts/host_ocl_global.cpp ${DHR}/src/host_utils.cpp ${DHR}/include/host_utils.h
+HOST_SRCS += {{ host_path }} ${DHR}/src/host_utils.cpp ${DHR}/include/host_utils.h
 CXXFLAGS += -I{{ params_folder_path }} -I${DHR}/include ${PARAMS_FLAGS}
 VPP_FLAGS += --hls.clock 200000000Hz:{{ kernel_name }} -I{{ params_folder_path }} -I${DHR}/include ${PARAMS_FLAGS}
 KERNEL_FRONTEND = {{ kernel_frontend_path }}
-KERNEL_SRCS = ${DHR}/src/seq_align_multiple.cpp ${DHR}/src/align/align.cpp ${DHR}/src/utils.cpp ${DHR}/src/frontend.cpp ${DHR}/src/traceback.cpp ${DHR}/src/pe.cpp ${KERNEL_FRONTEND}
+KERNEL_SRCS = ${DHR}/src/seq_align_multiple.cpp ${DHR}/src/align/align.cpp ${DHR}/src/utils.cpp ${DHR}/src/traceback.cpp ${DHR}/src/pe.cpp ${KERNEL_FRONTEND}
 
 help::
 	$(ECHO) "Makefile Usage:"
