II Violation Resolved
Former-commit-id: fec4d32912bc99ebe872472e9edef542f193d84d

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,5 @@ compile/OCL/host
 compile/emconfig.json
 compile/_x.hw_emu.xilinx_aws-vu9p-f1_shell-v04261818_201920_3/
 compile/build_dir.hw_emu.xilinx_aws-vu9p-f1_shell-v04261818_201920_3/
+
+/synthesis/
