kind of messed up affine kernel I need to backup
Former-commit-id: 990cf2a0e44f25f01bbc546fb6dbc157ce0b3554 [formerly 5c1177d8b254c3fc177d835193365de66b184cdc] [formerly e280ef30316602469fb7bce1678908648f7c827f [formerly 0e30e751d9364612e6d34d710b81ae551dd1af91]]
Former-commit-id: e280ef30316602469fb7bce1678908648f7c827f
Former-commit-id: 79be4e1e7c532c14c582813b34f2776ea83aebb9

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,6 +93,7 @@ target_compile_definitions(test_csim_local_affine PRIVATE ALIGN_LOCAL_AFFINE)
 
 target_compile_definitions(test_csim_dtw PRIVATE VPP_CLI)
 target_compile_definitions(test_csim_global_linear PRIVATE VPP_CLI)
+target_compile_definitions(test_csim_global_affine PRIVATE VPP_CLI)
 
 target_include_directories(test_csim_global_affine PRIVATE "/home/centos/workspace/DP-HLS/kernels/global_affine")
 target_include_directories(test_csim_global_linear PRIVATE "/home/centos/workspace/DP-HLS/kernels/global_linear")
