--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,5 @@ compile/_x.hw_emu.xilinx_aws-vu9p-f1_shell-v04261818_201920_3/
 compile/build_dir.hw_emu.xilinx_aws-vu9p-f1_shell-v04261818_201920_3/
 
 /synthesis/
+
+/backup/
