saparated rectangular kernel with banded kernel
Former-commit-id: 9014001afc5f94cd8ab7313e5cd7b843686b7394 [formerly f1658f80cd3b02d16d8d35cfc1f9365aa94b4919]
Former-commit-id: ab55a711a45a201f4cdd602ed2454218c6d511d9

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,6 @@ compile/build_dir.hw_emu.xilinx_aws-vu9p-f1_shell-v04261818_201920_3/
 /synthesis/
 
 /backup/
+
+# ignore the params.h symlinked in the include folder used for Vitis HLS projects. 
+/include/params.h
