--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,5 @@ compile/build_dir.hw_emu.xilinx_aws-vu9p-f1_shell-v04261818_201920_3/
 
 # ignore the params.h symlinked in the include folder used for Vitis HLS projects. 
 /include/params.h
+
+/.idea/
