added Viterbi primitive implementation
Former-commit-id: 7952be09245538a12bd61e7912f0dd0e47797e94 [formerly 14b712e10a039cc8565a4d473b0a4523e15366fe]
Former-commit-id: 4dc9aef7f2df4b4a549bc78a4624c79bda0b87f4

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ set(EXECUTABLE_TARGETS
     test_csim_dtw
     test_csim_profile_alignment
     test_csim_profile_alignment_real_data
+    test_csim_viterbi
 )
 
 add_compile_definitions(PUBLIC CMAKEDEBUG)
@@ -80,6 +81,12 @@ add_executable(test_csim_dtw
     "kernels/dtw/kernel_dtw.cpp"
     ${COMMON_SRCS})
 
+add_executable(test_csim_viterbi
+    "testbench/test_csim_viterbi.cpp"
+    "kernels/viterbi/kernel_viterbi.cpp"
+    ${COMMON_SRCS})
+
+
 # Test Python APIs
 #add_executable(test_pyapi "testbench/test_align.cpp"
 #    "include/seq_align_multiple.h"
@@ -100,6 +107,9 @@ target_compile_definitions(test_csim_global_linear PRIVATE VPP_CLI)
 target_compile_definitions(test_csim_global_affine PRIVATE VPP_CLI)
 target_compile_definitions(test_csim_local_linear PRIVATE VPP_CLI)
 target_compile_definitions(test_csim_local_affine PRIVATE VPP_CLI)
+target_compile_definitions(test_csim_profile_alignment PRIVATE VPP_CLI)
+target_compile_definitions(test_csim_profile_alignment_real_data PRIVATE VPP_CLI)
+target_compile_definitions(test_csim_viterbi PRIVATE VPP_CLI)
 
 target_include_directories(test_csim_global_affine PRIVATE "/home/centos/workspace/DP-HLS/kernels/global_affine")
 target_include_directories(test_csim_global_linear PRIVATE "/home/centos/workspace/DP-HLS/kernels/global_linear")
@@ -109,6 +119,7 @@ target_include_directories(test_csim_profile_alignment PRIVATE "/home/centos/wor
 target_include_directories(test_csim_profile_alignment_real_data PRIVATE "/home/centos/workspace/DP-HLS/kernels/profile_alignment")
 target_include_directories(test_csim_profile_alignment_real_data PRIVATE "/home/centos/libs/json/include")
 target_include_directories(test_csim_dtw PRIVATE "/home/centos/workspace/DP-HLS/kernels/dtw")
+target_include_directories(test_csim_viterbi PRIVATE "/home/centos/workspace/DP-HLS/kernels/viterbi")
 
 # Add include to Xilinx Library Files
 if (RAPTOR)
